[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chm2pdf"
version = "1.0.0"
description = "CHM to PDF converter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "pylibmspack>=0.2.0",
  "pypdf>=6.9.2",
]

[project.scripts]
chm2pdf = "chm2pdf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
